Fix table styling on smaller screens

--- a/src/containers/RecessionIndicator/RecessionIndicator.module.css
+++ b/src/containers/RecessionIndicator/RecessionIndicator.module.css
@@ -17,28 +17,7 @@
   font-family: Helvetica, Arial;
 }
 
-.chartArea {
-  display: flex;
-  min-width: 320px;
-  margin-top: 25px;
-  margin-bottom: 100px;
-  width: 100%;
-  height: 320px;
-}
-
-.plot {
-  background-color: hsla(0, 0%, 98%, .6);
-  font-weight: 500;
-}
-
-.tableSection {
-    padding-top: 80px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
+/*********************** TIME RANGE ***************************************/
 .TimeRangeController-container {
   margin: 0px 0px 0px 0px;
   display: flex;
@@ -145,4 +124,54 @@
   .TimeUserRange button {
     height: 60px;
   }
+}
+
+/*************************  CHART ****************************************/
+.chartArea {
+  display: flex;
+  min-width: 320px;
+  margin-top: 25px;
+  margin-bottom: 100px;
+  width: 100%;
+  height: 320px;
+}
+
+.plot {
+  background-color: hsla(0, 0%, 98%, .6);
+  font-weight: 500;
+}
+
+
+/*********************** TABLE  ***********************/
+.tableSection {
+  padding-top: 80px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+
+/* NOTE: REACT Bootstrap Table is very very limiting:
+You're stuck with whatever style it gives you without
+the possibility of modyfying it
+I ended up having to add a "calc" to the margin-left
+and fixing the width to try to solve the problem
+that the table, when the width is less than 660px, 
+would be pushed too much to the left thus hiding
+one of the table's column.
+NEXT TIME: Make your own table component.
+*/
+.Table-container {
+width: 95%;   
+}
+
+@media (max-width: 660px) {
+.Table-container {
+  width: 660px;    
+}
+.Table-container > div {
+  width: 660px;
+  margin-left: calc(-45vw + 311px);
+}
 }
